[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/manager/hazard_manager.gd" type="Script" id=1]
[ext_resource path="res://game/object/target/target_red.svg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88.375, 81 )

[node name="HazardManager" type="Node2D"]
script = ExtResource( 1 )

[node name="HazardContainer" type="Node2D" parent="."]

[node name="SpawnZone" type="Node2D" parent="."]
position = Vector2( 496, 286 )

[node name="Top" type="Position2D" parent="SpawnZone"]
position = Vector2( -12, -201 )

[node name="Bottom" type="Position2D" parent="SpawnZone"]
position = Vector2( 4, 208 )

[node name="Left" type="Position2D" parent="SpawnZone"]
position = Vector2( -281, 0 )

[node name="Right" type="Position2D" parent="SpawnZone"]
position = Vector2( 365, -6 )

[node name="TmrHazardSpawner" type="Timer" parent="."]

[node name="SpawnChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnChecker"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="SpawnChecker"]
visible = false
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 2 )
